--- a/css/visualization.css
+++ b/css/visualization.css
@@ -18,6 +18,7 @@
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
+/* Cursor styles for drag interaction */
 #visualization-mount {
     position: absolute;
     top: 0;
@@ -25,6 +26,11 @@
     width: 100%;
     height: 100%;
     background-color: #87ceeb;
+    cursor: grab; /* Indicates the element is draggable */
+}
+
+#visualization-mount.dragging {
+    cursor: grabbing; /* Changes cursor during drag */
 }
 
 .visualization-controls {
